--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import "_helpers/variables";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +7,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: $brand-bg;
+  color: $brand-primary;
 }
 
 code {
