[_heplers, ui, components, routes, faature]: add ui components + add roadmap feature + add Dnd base

--- a/src/_helpers/variables.scss
+++ b/src/_helpers/variables.scss
@@ -2,9 +2,13 @@ $brand-primary: #f6f7f7;
 $brand-secondary: #898e97;
 $brand-tertiary: #787f8c;
 $brand-fourth: #bdedfc;
+$brand-error: #e6663d;
+$brand-warning: #ffc764;
+$brand-success: #9ccd96;
 $brand-bg: #1e1f22;
 $brand-bg-secondary: #26272a;
 $brand-border: #2f3135;
+$border-radius: 4px;
 $brand-shadow: rgba(0,0,0,.2);
 $brand-bg-modal: #222326;
 $brand-shadow-modal: rgba(0,0,0,.5);
