--- a/src/ui/Button/Button.module.scss
+++ b/src/ui/Button/Button.module.scss
@@ -17,7 +17,7 @@
   background: none;
   border: 1px solid rgba(0, 0, 0, 0);
   outline: none;
-  border-radius: 5px;
+  border-radius: $border-radius;
 
   &-variant {
     &--filled {
