--- a/src/ui/Form/Select/Select.module.scss
+++ b/src/ui/Form/Select/Select.module.scss
@@ -1,9 +1,11 @@
+@import '../../../_helpers/variables';
+
 .select {
   width: 100%;
   padding: 8px;
   font-size: 16px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: $border-radius;
   box-sizing: border-box;
 
   &::after {
