--- a/src/ui/Modal/Modal.module.scss
+++ b/src/ui/Modal/Modal.module.scss
@@ -4,7 +4,7 @@
   background-color: $brand-bg-modal;
   padding: 16px 24px;
   border: 1px solid $brand-border;
-  border-radius: 4px;
+  border-radius: $border-radius;
   box-shadow: $brand-shadow-modal 0 16px 70px;
   min-width: 400px;
   max-width: 500px;
