[ui, components, routes, feature, app]: add ui components + add feature-requests feature + add cardsSlice + add sideBar + dnd fix for react 18 strict mode + add modal forms and states + add dynamic routes for card details page

--- a/src/_helpers/variables.scss
+++ b/src/_helpers/variables.scss
@@ -9,6 +9,7 @@ $brand-bg: #1e1f22;
 $brand-bg-secondary: #26272a;
 $brand-border: #2f3135;
 $border-radius: 4px;
+$border-radius-big: 8px;
 $brand-shadow: rgba(0,0,0,.2);
 $brand-bg-modal: #222326;
 $brand-shadow-modal: rgba(0,0,0,.5);
