[app, components, feature]: add authSlice + add firebase + firebase settings + add .env file with variables for firebase + upgrade header component + upgrade ModalForm component

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -19,6 +19,12 @@
     gap: 20px;
   }
 
+  &__user {
+    display: flex;
+    align-items: center ;
+    justify-content: center;
+  }
+
   &__navi {
     display: flex;
     align-content: center;
