--- a/src/ui/Form/Input/Input.module.scss
+++ b/src/ui/Form/Input/Input.module.scss
@@ -1,6 +1,7 @@
 @import '../../../_helpers/variables';
 
 .input {
+  margin-top: 10px;
   color: $brand-primary;
   background-color: $brand-bg;
   border: 1px solid $brand-border;
