--- a/src/ui/Form/Select/Select.module.scss
+++ b/src/ui/Form/Select/Select.module.scss
@@ -4,25 +4,51 @@
   width: 100%;
   padding: 8px;
   font-size: 16px;
-  border: 1px solid #ccc;
+  border: 1px solid $brand-border;
   border-radius: $border-radius;
   box-sizing: border-box;
 
-  &::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
-    width: 0;
-    height: 0;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-top: 5px solid #000;
-    pointer-events: none;
+  &__selectedOption {
+    display: flex;
+    align-items: center;
+    padding: 8px 16px;
+    cursor: pointer;
+  }
+
+  &__container {
+    position: relative;
+  }
+
+  &__option {
+    display: flex;
+    align-items: center;
+    padding: 8px 16px;
+    cursor: pointer;
+
+    &_selected {
+      background-color: $brand-bg;
+    }
+
+    &_container {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      z-index: 1;
+      width: 100%;
+      max-height: 200px;
+      overflow-y: auto;
+      border: 1px solid $brand-border;
+      border-radius: 4px;
+      background-color: $brand-bg;
+    }
+
+    &_button {
+      width: inherit;
+    }
+
+    &:hover {
+      background-color: $brand-bg-secondary;
+    }
   }
 }
 
-.option {
-  font-size: 16px;
-}
