--- a/src/ui/Modal/Modal.module.scss
+++ b/src/ui/Modal/Modal.module.scss
@@ -7,6 +7,7 @@
   box-shadow: $brand-shadow-modal 0 16px 70px;
   min-width: 400px;
   max-width: 500px;
+  min-height: 100px;
   margin: 0 auto;
   position: relative;
   font-size: 13px;
