[app, components, features, mock, types, ui]: dnd finish + mock data structure update + add search into feature requests + add filter in feature requests + update ui components + small fixes

--- a/src/features/FeatureRequests/FeatureRequests.module.scss
+++ b/src/features/FeatureRequests/FeatureRequests.module.scss
@@ -10,5 +10,10 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+
+    &_filter {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 }
