[app, components, features, ui]: redux fixes + header update + feature requests page filter upgrade + FormInput add Custom Input + Select update

--- a/src/features/FeatureRequests/components/FeatureCard/FeatureCard.module.scss
+++ b/src/features/FeatureRequests/components/FeatureCard/FeatureCard.module.scss
@@ -15,6 +15,9 @@
     cursor: pointer;
     text-decoration: none;
     color: $brand-secondary;
+    min-height: 60px;
+    max-height: 60px;
+    overflow: hidden;
 
     &:hover {
       background-color: $brand-bg;
